src/objects/License_Usage__c.object
<CustomObject>
    <fields>
        <fullName>AvailableLicenses__c</fullName>
        <label>Available Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LicenseName__c</fullName>
        <label>License Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <label>LicenseType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <label>OrgID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>OrgName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalLicenses__c</fullName>
        <label>Total Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsedLicenses__c</fullName>
        <label>Used Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>License Usage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>